# SNN-MNIST-FPGA

./: LICENSE  README.md
hdl/: excitatory_neuron.v  inhibitory_neuron.v  snn.v
tb/: CMakeLists.txt  Makefile  input.vc  tb.cpp
